# pico-template

./: CMakeLists.txt  main.cpp
